# learning-burn

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md
book-tests/: Cargo.toml
book-tests/examples/: ch11_01_forward_from_scratch.rs  ch11_02_manual_vs_autodiff_backward.rs  ch11_03_train_from_scratch.rs  ch11_04_gradient_check.rs  ch12_01_scaled_dot_product_attention.rs  ch12_02_causal_attention.rs  ch12_03_multi_head_attention.rs  ch12_04_transformer_block.rs  ch14_01_weights_in_binary.rs  ch14_02_backend_agnostic.rs  ch14_03_quantization.rs  ch14_04_footprint.rs  ch1_09_display_and_closeness.rs  ch2_06_elementwise_masking.rs  ch4_01_vector_norm.rs
examples/chapter01/e01_rank_vs_shape/: README.md
examples/chapter01/e02_basic_creation/: README.md
examples/chapter02/e01_arithmetic/: README.md  python.py  rust.rs
examples/chapter02/e02_broadcasting/: README.md  python.py  rust.rs
examples/chapter02/e03_reshaping_slicing/: README.md  python.py  rust.rs
examples/chapter02/e04_reductions/: README.md  python.py  rust.rs
examples/chapter02/e05_standardize_features/: README.md  python.py  rust.rs
examples/chapter02/e06_elementwise_masking/: README.md  python.py  rust.rs
examples/chapter03/e01_matmul/: README.md  python.py  rust.rs
examples/chapter03/e02_transpose_matvec_outer/: README.md  python.py  rust.rs
examples/chapter03/e03_structured_and_batched/: README.md  python.py  rust.rs
examples/chapter05/e01_backward_gradient/: README.md  python.py  rust.rs
examples/chapter05/e02_gradient_container/: README.md  python.py  rust.rs
(+3 files in other folders)
